@@ -1,5 +1,8 @@
 2006-10-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>
 
+	* src/Browser.py:
+	Make 'Open' and 'Delete' buttons only sensitive when a map is selected
+
 	* src/ImageThought.py:
 	Gracefully handle case where image file isn't available (display empty thought)
 	
